--- a/style.css
+++ b/style.css
@@ -50,6 +50,7 @@ header {
     font-size: 16px;
     color: #727272;
     margin-top: 30px;
+    margin-bottom: 30px;
 }
 
 .banner-btn,
@@ -110,7 +111,42 @@ header {
     color: #FF900E;
 }
 
+.features-love-enjoy {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    align-items: center;
+    grid-column-gap: 50px;
+    padding: 100px 50px;
 
+}
+
+.features-love-enjoy-title {
+    font-weight: 700;
+    font-size: 45px;
+    border-left: 5px solid #FF900E;
+    margin-bottom: 10px;
+
+}
+
+.features-love-enjoy-description {
+    background: #FFFFFF;
+    box-shadow: 0px 4px 30px rgba(0, 0, 0, 0.06);
+    border-radius: 8px;
+    padding: 30px;
+    margin-bottom: 20px;
+}
+
+.features-love-enjoy-description-title {
+    font-weight: 600;
+    font-size: 20px;
+    margin-bottom: 10px;
+}
+
+.features-love-enjoy-info {
+    font-weight: 400;
+    font-size: 16px;
+    color: #727272;
+}
 
 /* ---------------------
 Responsive
