--- a/style.css
+++ b/style.css
@@ -47,7 +47,8 @@ header {
 
 .banner-info,
 .feature-info,
-.sponsors-details-info {
+.sponsors-details-info,
+.clients-details-info {
     font-size: 16px;
     color: #727272;
     margin-top: 30px;
@@ -155,7 +156,8 @@ header {
 }
 
 .some-facts-details-title,
-.sponsors-details-title {
+.sponsors-details-title,
+.clients-details-title {
     font-weight: 700;
     font-size: 45px;
 }
@@ -192,7 +194,33 @@ header {
     color: #727272;
 }
 
-.sponsors-details {
+.clients-container {
+    background: #FFF4E7;
+    padding: 30px;
+    margin-bottom: 50px;
+}
+
+.clients-feedback {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
+    justify-items: center;
+    text-align: left;
+    margin-bottom: 100px;
+
+}
+
+.client-feedback img {
+    width: 56px;
+    height: 56px;
+}
+
+.fontawesome-icon {
+    color: #FF900E;
+}
+
+.sponsors-details,
+.clients-details {
     text-align: center;
 }
 
@@ -202,6 +230,19 @@ header {
     grid-template-columns: repeat(5, 1fr);
     justify-items: center;
 }
+
+
+footer {
+    background: #FFF4E7;
+    border-radius: 8px;
+    text-align: center;
+    padding: 40px;
+    margin-top: 100px;
+    margin-bottom: 100px;
+    color: #424242;
+}
+
+
 
 /* ---------------------
 Responsive
