--- a/style.css
+++ b/style.css
@@ -41,8 +41,9 @@ header {
 
 .banner-title {
     /* font-weight: 700px; */
-    font-size: 64px;
+    font-size: 54px;
     margin-top: 30px;
+    text-align: center;
 }
 
 .banner-info,
@@ -77,7 +78,7 @@ header {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 85px 5px 100px 100px;
+    margin: 85px;
 }
 
 .feature {
@@ -258,12 +259,39 @@ Responsive
 /* Mobile Device */
 
 @media only screen and (max-width:688px) {
-    .container {
-        width: 100%;
+
+    .menu-items,
+    .feature,
+    .features-love-enjoy,
+    .facts,
+    .clients-feedback {
+        grid-template-columns: repeat(1, 1fr);
+        justify-items: center;
     }
 
-    .nav-container .menu-items {
+    .nav-container,
+    .quick-list-features,
+    .some-facts,
+    .clients-container,
+    .sponsors,
+    .footer,
+    .menu-items,
+    .feature,
+    .features-love-enjoy,
+    .facts,
+    .clients-feedback {
+        display: flex;
         flex-direction: column;
-        grid-template-columns: repeat(1, 1fr);
+        align-items: center;
+        text-align: center;
+        gap: 30px;
+    }
+
+    .sponsor-image {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        align-items: center;
+        gap: 30px;
     }
 }
